package com.uml.q03;

public class Engine {
    public Engine() {
    }
}
