package com.uml.q03;

public class Frame {
    public Frame() {
    }
}
