package com.uml.q03;

public class Wheel {
    public Wheel() {
    }
}
