@startuml

title __Q03's Class Diagram__\n

  namespace com.uml.q03 {
    class com.uml.q03.Car {
        + Car()
    }
  }
  

  namespace com.uml.q03 {
    class com.uml.q03.Engine {
        + Engine()
    }
  }
  

  namespace com.uml.q03 {
    class com.uml.q03.Frame {
        + Frame()
    }
  }
  

  namespace com.uml.q03 {
    class com.uml.q03.Wheel {
        + Wheel()
    }
  }
  

  com.uml.q03.Car o-- com.uml.q03.Engine : engine
  com.uml.q03.Car o-- com.uml.q03.Frame : frame
  com.uml.q03.Car o-- com.uml.q03.Wheel : wheel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
